Successfully integrated the new tokenizer.