@@ -4,12 +4,15 @@
 // define the IOstreams
 FILE * source = NULL;
 
+bool checkForBoundary(Token *);
+
 // main routine
 int main(int argc, char* argv[])
 {
 	// Local variables
 	string * dummy = new string("");
 	Token * result;
+    Token * temp;
 
 	// open source file if any.
 	if (argc > 1)
@@ -19,10 +22,43 @@ int main(int argc, char* argv[])
 
     result = getTokenList();
 
-	result->outputList(dummy);
+    // Handle the tokens
+    // test the conext construction first
+    temp = result;
+    checkForBoundary(temp);
+    temp = temp->getNext();
+    checkForBoundary(temp);
+    temp = temp->getNext();
+    checkForBoundary(temp);
+    temp = temp->getNext();
+    checkForBoundary(temp);
+
+    while (temp->getNext())
+        temp = temp->getNext();
+
+    checkForBoundary(temp);
+    temp = temp->getPrev();
+    checkForBoundary(temp);
+    temp = temp->getPrev();
+    checkForBoundary(temp);
+    temp = temp->getPrev();
+    checkForBoundary(temp);
+
+	//result->outputList(dummy);
 
 	// clean up
     delete result;
     delete dummy;
 	if (source) fclose(source);
+}
+
+bool checkForBoundary(Token * candidate)
+{
+    Context * context = new Context(candidate);
+
+    context->getList()->outputList(new string("|"));
+    cout << endl;
+
+
+    return false;
 }
