@@ -1,1 +1,4 @@
-Successfully integrated the new tokenizer.
+added copy constructor to token class.
+added context class
+added context generator.
+now to integrate with nltk. eek!
